--- a/.env
+++ b/.env
@@ -2,3 +2,9 @@ DB_USER=emiliano
 DB_PASSWORD=God080591.
 DB_DATABASE=test_fast
 SECRET_KEY=supersecret123456
+MAIL_USERNAME=rubenmessi10
+MAIL_PASSWORD=god080591.
+MAIL_FROM=rubenmessi10@gmail.com
+MAIL_PORT=587
+MAIL_SERVER=smtp.gmail.com
+MAIL_FROM_NAME=My_site
